tests/syntax_error/first_line_indent.jou
    def foo() -> void:  # Error: expected a definition or declaration, got more indentation
    return
